[package]
name = "sendkey"
version = "0.1.0"
authors = ["Exr0n <spotyie@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
autopilot = "0.4.0"
structopt = "0.3.13" # https://rust-cli.github.io/book/tutorial/cli-args.html
